add note about using base repo for docker

--- a/instructions.tex
+++ b/instructions.tex
@@ -360,6 +360,8 @@ version of ROS2.
 
 \subsection{Installing docker}
 \label{sec:installing-docker}
+It is possible to have a version of Docker installed simply by using the available repository, but since we are on Ubuntu, a PPA is available
+from Docker in order to have the most up-to-date version.
 Following \href{https://docs.docker.com/engine/install/ubuntu/#install-using-the-repository}{the official documentation}, the following steps can be taken to
 install the latest version of Docker on a Ubuntu system.
 The last command is meant to test the install. If everything went smoothly, you should see something similar to what is presented on the figure \ref{fig:hello-docker} below:
