--- a/instructions.tex
+++ b/instructions.tex
@@ -354,7 +354,7 @@ You should be able to see the first terminal sending "Hello world" messages, and
 % -------------------------------------------------------------------------------
 \section{ROS2 in a container}
 \label{sec:ros2-container}
-As it is used to test and build micro-ROS configurations, running ROS2 in a Docker container is a great way to have a reproductible configuration
+As it is used to test and build micro-ROS configurations, running ROS2 in a Docker container is a great way to have a reproducible configuration
 of you system. This part of the guide will present how to install Docker on the Kria board and then how to use it to deploy the latest
 version of ROS2.
 
@@ -434,8 +434,12 @@ but not officially yet for the 22.04 version.
 Furthermore, the current install was tested on Pop OS, a distribution derived from Ubuntu.
 
 This guide will present a guide that supposedly works for all distributions based on the newest
-LTS from Ubuntu.
+LTS from Ubuntu. For other Linux distributions or operating system, please refer to the official documentation.
 
+
+\subsection{Install dependencies}
+\label{sec:install-dependencies}
+Some packages are required to be installed in order for the installation process to happen successfully:
 \begin{tcolorbox}
 \begin{verbatim}
 sudo apt-get update
@@ -450,15 +454,23 @@ libncursesw5-dev
 \end{verbatim}
 \end{tcolorbox}
 
+Once this is done, the downloaded binary installer can be executed:
 \begin{tcolorbox}
 \begin{verbatim}
 ./Xilinx_Unified_2022.2_1014_8888_Lin64.bin
 \end{verbatim}
 \end{tcolorbox}
 
+If it is not possible to execute it, make it executable with the \verb|chmod| command:
+\begin{tcolorbox}
+\begin{verbatim}
+sudo chmod +x ./Xilinx_Unified_2022.2_1014_8888_Lin64.bin
+\end{verbatim}
+\end{tcolorbox}
+
 
 % -------------------------------------------------------------------------------
-\section{Building an example firmware}
+\section{Building an example firmware for the Cortex R5F}
 \label{sec:bulding-an-example}
 \href{Xilinx documentation about building a demo firmware}{https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/1837006921/OpenAMP+Base+Hardware+Configurations\#Build-RPU-firmware}
 
@@ -507,6 +519,95 @@ echo stop > /sys/class/remoteproc/remoteproc0/state
 \end{tcolorbox}
 
 
+% -------------------------------------------------------------------------------
+\section{Building the micro-ROS static library}
+\label{sec:building-micro-ros}
+In this section, the goal is to build the micro-ROS library in order to be
+able to integrate the micro-ROS function into our Cortex R5F firmware.
+All of this should be done via cross-compiling on a host machine, however
+it is most common in the guides about micro-ROS to build the firmwares and libraries within a Docker,
+so we can have access of the ROS environment without installing it on my machine.
+One can simply run this command to summon a ROS2 Docker\footnote{If Docker is not set up on your machine, you can follow the guide on \href{https://docs.docker.com/engine/install/ubuntu/}{the official website}. When you can successfully run the ``hello-world'' container, you are good to go.} with the wanted version, but first we also need to check the cross-compilation tools.
 
+These are provided with the Vitis IDE, installed earlier in this guide, but
+you should check if the path to the binaries are correct:
+
+\begin{tcolorbox}
+\begin{verbatim}
+sudo find / -name 'armr5-none-eabi-gcc'
+\end{verbatim}
+\end{tcolorbox}
+
+The return should look something like this:\\
+\verb|/home/sunoc/Xilinx/Vitis/2022.2/gnu/armr5/lin/gcc-arm-none-eabi/bin/armr5-none-eabi-gcc|
+
+You can then re-use some part of that path and run the following commands to start the
+Docker container with access to the toolchain for ARM R5:
+\begin{tcolorbox}
+\begin{verbatim}
+toolchain='/home/sunoc/Xilinx/Vitis/2022.2/gnu/armr5/lin/gcc-arm-none-eabi/'
+docker run -d --name ros_build -it --net=host \
+-v /dev:/dev \
+-v $toolchain:/armr5-toolchain \
+--privileged ros:humble
+docker exec -it ros_build bash
+\end{verbatim}
+\end{tcolorbox}
+
+
+Now we are in the ROS2 container, we can build the micro-ROS firmware as presented in the \href{https://micro.ros.org/docs/tutorials/advanced/create\_custom\_static\_library}{dedicated micro-ROS guide}:
+\begin{tcolorbox}
+\begin{verbatim}
+. /opt/ros/$ROS_DISTRO/setup.bash
+
+mkdir microros_ws
+cd microros_ws
+git clone -b $ROS_DISTRO \
+https://github.com/micro-ROS/micro_ros_setup.git \
+src/micro_ros_setup
+
+sudo apt update
+sudo apt-get -y install python3-pip wget nano
+
+sudo rosdep fix-permissions
+rosdep update
+rosdep install --from-paths src --ignore-src -y
+
+colcon build
+. ./install/local_setup.bash
+
+ros2 run micro_ros_setup create_firmware_ws.sh generate_lib
+\end{verbatim}
+\end{tcolorbox}
+
+From there we will need some configuration files specifically for
+our Coretx R5F.
+
+\begin{tcolorbox}
+\begin{verbatim}
+include(CMakeForceCompiler)
+
+set(CMAKE_SYSTEM_NAME Generic)
+set(CMAKE_SYSTEM_PROCESSOR arm)
+set(CMAKE_CROSSCOMPILING 1)
+set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
+set(PLATFORM_NAME "LwIP")
+
+# Makefile flags
+set(ARCH_CPU_FLAGS "-mcpu=cortex-r5f -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard -DUSE_HAL_DRIVER -DSTM32F446xx -D_TIMEVAL_DEFINED -O0 -Wall -fdata-sections -ffunction-sections")
+set(ARCH_OPT_FLAGS "")
+
+set(CMAKE_C_COMPILER /microros_ws/freertos_apps/microros_nucleo_f446ze_extensions/../../toolchain/bin/arm-none-eabi-gcc)
+set(CMAKE_CXX_COMPILER /microros_ws/freertos_apps/microros_nucleo_f446ze_extensions/../../toolchain/bin/arm-none-eabi-g++)
+
+set(CMAKE_C_FLAGS_INIT "-std=c11 ${ARCH_CPU_FLAGS} ${ARCH_OPT_FLAGS} -DCLOCK_MONOTONIC=0" CACHE STRING "" FORCE)
+set(CMAKE_CXX_FLAGS_INIT "-std=c++14 ${ARCH_CPU_FLAGS} ${ARCH_OPT_FLAGS} -DCLOCK_MONOTONIC=0" CACHE STRING "" FORCE)
+
+set(__BIG_ENDIAN__ 0)
+\end{verbatim}
+\end{tcolorbox}
+
+
+export PATH=$PATH:$(pwd)/toolchain/bin
 
 \end{document}
