--- a/instructions.tex
+++ b/instructions.tex
@@ -221,6 +221,18 @@ systemctl list-units | grep snapd
 \end{verbatim}
 \end{tcolorbox}
 
+And here are some other stuff that can safely be removed too is the desktop is not to be used:
+\begin{tcolorbox}
+\begin{verbatim}
+sudo apt-get autoremove --purge yaru-theme-icon \
+fonts-noto-cjk yaru-theme-gtk vim-runtime \
+ubuntu-wallpapers-jammy humanity-icon-theme
+
+sudo apt-get autoclean
+sudo reboot now
+\end{verbatim}
+\end{tcolorbox}
+
 % -------------------------------------------------------------------------------
 \section{Starting remoteproc}
 \label{sec:starting-remoteproc}
@@ -272,6 +284,18 @@ patch system.dts < system.patch
 \end{verbatim}
 \end{tcolorbox}
 
+As for the board to be able to reserve the correct amount of memory with the new settings, some
+\verb|cma| kernel configuration is needed\footnote{The overlapping memory will not prevent the board to boot,
+  but it disables the PWM for the CPU fan, which will then run at full speed, making noise.}:
+\begin{tcolorbox}
+\begin{verbatim}
+sudo nano /etc/default/flash-kernel
+LINUX_KERNEL_CMDLINE="quiet splash cma=512M cpuidle.off=1"
+LINUX_KERNEL_CMDLINE_DEFAULTS=""
+sudo flash-kernel
+\end{verbatim}
+\end{tcolorbox}
+
 Now the DTS file has been modified, one can regenerate the binary and place it on the \verb|/boot| partition
 and reboot the board:
 \begin{tcolorbox}
@@ -294,21 +318,21 @@ ls /sys/class/remoteproc/
 If it is the case, it means that the patch was successful and RPMsg is
 ready to test with some example.
 
-\subsection{Fan PWM control}
-\label{sec:fan-pwm-control}
-An issue that appeared with the DTO was the PWM regulation for the board fan.
-
-Indeed, this system is, in the recent version of Ubuntu, managed by default
-by the operating system, but it appeared that this system was not working anymore
-after applying some DTO for the \verb|remoteproc|.
-
-As it turned out, some malformation of the element in the DTS file (some nodes were
-at the ``wrong'' place in the file) disabled the starting for the \verb|fan_pwm|
-node. Some other weird errors appeared at the time.
-
-With the latest version of the patch that is used in this guide, it is now
-possible to have our DTO enabling the \verb|remoteproc| while keeping
-the \verb|fan_pwm| enabled.
+%\subsection{Fan PWM control}
+%\label{sec:fan-pwm-control}
+%An issue that appeared with the DTO was the PWM regulation for the board fan.
+%
+%Indeed, this system is, in the recent version of Ubuntu, managed by default
+%by the operating system, but it appeared that this system was not working anymore
+%after applying some DTO for the \verb|remoteproc|.
+%
+%As it turned out, some malformation of the element in the DTS file (some nodes were
+%at the ``wrong'' place in the file) disabled the starting for the \verb|fan_pwm|
+%node. Some other weird errors appeared at the time.
+%
+%With the latest version of the patch that is used in this guide, it is now
+%possible to have our DTO enabling the \verb|remoteproc| while keeping
+%the \verb|fan_pwm| enabled.
 
 
 
@@ -569,10 +593,22 @@ sudo ln -s /usr/lib/x86_64-linux-gnu/libidn.so.12 /usr/lib/x86_64-linux-gnu/libi
 \section{Loading a new firmware from Linux}
 \label{sec:loading-new-firmware}
 
+\begin{tcolorbox}
+\begin{verbatim}
+git clone https://github.com/Xilinx/meta-openamp.git
+cd  meta-openamp
+git checkout xlnx-rel-v2022.2
+cd  .//recipes-openamp/rpmsg-examples/rpmsg-echo-test
+make
+sudo ln -s $(pwd)/echo_test /usr/bin/
+\end{verbatim}
+\end{tcolorbox}
+
 
 \begin{tcolorbox}
 \begin{verbatim}
 sudo -s
+cp image_echo_test /lib/firmware
 echo image_echo_test  > /sys/class/remoteproc/remoteproc0/firmware
 echo start > /sys/class/remoteproc/remoteproc0/state
 echo_test
