gotta be careful about dd

--- a/instructions.tex
+++ b/instructions.tex
@@ -97,7 +97,7 @@ One the image has been downloaded at Canonical's page (\url{https://ubuntu.com/d
 \begin{tcolorbox}[colback=red!5!white,colframe=red!75!black]
   WARNING: The next part involve the \verb|dd| command writing on disks!!! \\
   As always with the dd command, you have to be VERY careful on what arguments you give. Selecting the wrong disk will result on the destruction of your data !! \\
-  \textbf{If you are unsure of what to do, seek assistance !}
+  \underline{If you are unsure of what to do, seek assistance !}
 \end{tcolorbox}
 
 
